--- a/frontend/src/components/pages/home/home.html
+++ b/frontend/src/components/pages/home/home.html
@@ -102,39 +102,23 @@
 					</li>
 				</ul>
 				</div>
+
+				<legend>Quelles sont les premières étapes pour commencer?</legend>
+
+				<div class="project-content-inner">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ullamcorper tellus rhoncus risus efficitur, vitae egestas justo facilisis. Aenean non consectetur erat. Nulla euismod vel neque non feugiat. Proin sed gravida lectus. Nullam eu mi a magna feugiat ullamcorper in nec metus. In vel ligula rutrum, tempus tortor sit amet, pellentesque est. Donec dignissim lectus erat, eu rutrum tellus tincidunt in. Nam quis turpis lobortis, gravida risus nec, maximus nulla. Duis eu dapibus magna. Aliquam dapibus urna nec sapien dignissim, eget lobortis leo tempor. Proin vel cursus massa, non fringilla mi. Pellentesque est magna, luctus molestie sapien eget, faucibus semper metus. Duis libero quam, vehicula id massa ac, ultricies efficitur lorem. Phasellus eu est a magna tempor vehicula et id diam. Duis mollis diam mauris, vel porta turpis sollicitudin sed. Sed iaculis vulputate nibh, quis vestibulum ex vehicula suscipit.
+					</p>
+					<p>
+						Fusce eget elit nisi. Phasellus a mattis elit, nec viverra lectus. Aenean scelerisque leo massa, eu vestibulum ligula ultrices eget. Donec et justo mi. Proin tristique odio vel elit posuere vestibulum. Aliquam blandit ex sit amet eleifend gravida. Curabitur eros arcu, consequat sit amet lectus bibendum, egestas consequat ex. Vivamus pulvinar mattis libero, in consequat orci eleifend quis. Aenean rutrum nunc vel enim posuere rhoncus. Praesent id volutpat leo. Donec eu nulla risus. Phasellus dui nulla, auctor id felis non, mollis dictum ligula. Aenean quis fermentum elit.
+					</p>
+					<p>
+						Morbi tempus justo at velit tincidunt, at aliquet dolor semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur ultrices pretium lectus, at viverra odio tempor eu. Suspendisse lectus leo, efficitur sed libero ac, pulvinar tincidunt neque. Vivamus sagittis egestas sapien tincidunt cursus. Pellentesque a ligula non tortor iaculis ultrices ac vel magna. Vivamus in lectus faucibus, tincidunt turpis ut, pretium justo. Curabitur imperdiet, ipsum nec imperdiet laoreet, nisi leo volutpat magna, ut lobortis neque elit et nunc.
+					</p>
+
+				</div>
 			</div>
 			<div class="col-xs-6">
-				<legend>Quand utiliser Monitool</legend>
-				<div class="project-content-inner">
-
-				<p>Monitool joue un rôle pendant quatre étapes d'un projet</p>
-				<ul style="margin-bottom: 10px">
-					<li>
-						<strong>Dans la conception du cadre logique</strong><br/>
-
-						Avec la mise à disposition des cadres logiques des autres projets,
-						et du catalogue des indicateurs, accompagné des bases, cibles et
-						collectes passées pour chacun d'eux.
-					</li>
-					<li>
-						<strong>Mise en place des outils de suivi</strong><br/>
-
-						Explicitez le chemin suivi par vos données et fixez des échéances sur
-						leur collecte
-					</li>
-					<li>
-						<strong>Suivi régulier</strong><br/>
-						Les graphes et tableaux de reporting de votre choix sont disponibles
-						et toujours réalisées avec les données les plus à jour disponible
-					</li>
-					<li>
-						<strong>Post-fermeture</strong><br/>
-						Vos projets restent archivés et disponibles pour toute consultation
-						future!
-					</li>
-				</ul>
-				</div>
-
 				<legend>À garder en tête</legend>
 				<div class="project-content-inner">
 					<p>Monitool est un outil de gestion de projet, et non pas de suivi épidémiologique.</p>
@@ -149,6 +133,37 @@
 					des projets de support aux structures.
 					</p>
 				</div>
+
+				<legend>Quand utiliser Monitool</legend>
+				<div class="project-content-inner">
+					<p>Monitool joue un rôle pendant quatre étapes d'un projet</p>
+					<ul style="margin-bottom: 10px">
+						<li>
+							<strong>Dans la conception du cadre logique</strong><br/>
+
+							Avec la mise à disposition des cadres logiques des autres projets,
+							et du catalogue des indicateurs, accompagné des bases, cibles et
+							collectes passées pour chacun d'eux.
+						</li>
+						<li>
+							<strong>Mise en place des outils de suivi</strong><br/>
+
+							Explicitez le chemin suivi par vos données et fixez des échéances sur
+							leur collecte
+						</li>
+						<li>
+							<strong>Suivi régulier</strong><br/>
+							Les graphes et tableaux de reporting de votre choix sont disponibles
+							et toujours réalisées avec les données les plus à jour disponible
+						</li>
+						<li>
+							<strong>Post-fermeture</strong><br/>
+							Vos projets restent archivés et disponibles pour toute consultation
+							future!
+						</li>
+					</ul>
+				</div>
+
 			</div>
 		</div>
 	</div>
