--- a/frontend/src/components/pages/project-structure-data-source/partition-edition.html
+++ b/frontend/src/components/pages/project-structure-data-source/partition-edition.html
@@ -223,7 +223,7 @@
 	</button>
 
 	<button ng-click="$ctrl.delete()" ng-if="!$ctrl.isNew" class="btn btn-danger">
-		<i class="fa fa-times"></i>
+		<i class="fa fa-trash"></i>
 		<span translate="shared.delete"></span>
 	</button>
 </div>
