--- a/frontend/src/components/pages/admin-cc-indicator/cc-indicator-list.html
+++ b/frontend/src/components/pages/admin-cc-indicator/cc-indicator-list.html
@@ -6,6 +6,15 @@
 
 <div class="alert alert-info" translate="indicator.list_info"></div>
 
+
+
+<div class="project-content-inner" style="text-align: center">
+	<span ng-repeat="theme in $ctrl.themes|orderBy:('name.' + $root.language)" ng-class="theme.class">
+		<i class="fa fa-circle fa-fw"></i>{{theme.name[$root.language]}}&nbsp;&nbsp;
+	</span>
+</div>
+
+
 <div>
 	<div class="panel panel-default columns-panel" ng-repeat="indicator in $ctrl.indicators|orderBy:('name.' + $root.language)">
 		<div class="panel-heading">
@@ -13,26 +22,36 @@
 		</div>
 		<div class="panel-body">
 			<i class="fa fa-circle"
+				title="{{theme.name[$root.language]}}"
 			   style="margin-right: 3px"
 			   ng-repeat="theme in indicator.themes|getObjects:$ctrl.themes|orderBy:('name.' + $root.language)"
-			   ng-class="theme.class">
-
-				{{theme.name[$root.language]}}
-			</i>
+			   ng-class="theme.class"></i>
 
 			<div ng-if="indicator.description[$root.language]">{{indicator.description[$root.language]|maxLength:200}}</div>
 			<div ng-if="!indicator.description[$root.language]" translate="indicator.missing_description"></div>
 
-			<a	ng-click="$ctrl.onEditClicked(indicator)"
-				class="btn btn-xxs btn-default"
-				translate="shared.edit"></a>
-	  </div>
-	</div><div class="panel panel-dashed columns-panel">
-		<div class="panel-heading">
-			<div class="panel-title" translate="indicator.new_indicator"></div>
+			<div class="panel-buttons btn-group">
+				<a	ng-click="$ctrl.onEditClicked(indicator)"
+					class="btn btn-xxs btn-default"
+					translate="shared.edit"></a>
+
+				<div class="btn-group" uib-dropdown>
+					<a class="btn btn-default btn-xxs" uib-dropdown-toggle>
+						<span class="caret"></span>
+					</a>
+
+					<ul class="dropdown-menu">
+						<li>
+							<a ng-click="$ctrl.onDeleteClicked(indicator)">
+								<i class="fa fa-trash text-danger"></i>
+								<span class="text-danger" translate="shared.delete"></span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div class="panel-body">
-			<a ng-click="$ctrl.onCreateClicked()" class="btn btn-xxs btn-default" translate="indicator.create_new"></a>
-	  </div>
 	</div>
 </div>
+
+<a ng-click="$ctrl.onCreateClicked()" class="btn btn-default" translate="indicator.create_new"></a>
