--- a/frontend/src/components/pages/project-list/list.html
+++ b/frontend/src/components/pages/project-list/list.html
@@ -51,14 +51,41 @@
 				{{p.start|date}} - {{p.end|date}}
 			</div>
 
-			<div class="panel-buttons">
-				<a ng-if="p.active" class="btn btn-default btn-xxs" ng-click="$ctrl.open(p)" translate="shared.open"></a>
-				<a ng-if="!p.active && p.isOwner" class="btn btn-default btn-xxs" ng-click="$ctrl.restore(p)" translate="shared.restore"></a>
+			<div class="panel-buttons btn-group">
+				<a ng-if="p.active" class="btn btn-default btn-xxs" ng-click="$ctrl.onOpenClicked(p)" translate="shared.open"></a>
+				<a ng-if="!p.active && p.isOwner" class="btn btn-default btn-xxs" ng-click="$ctrl.onRestoreClicked(p)" translate="shared.restore"></a>
+
+				<div class="btn-group" uib-dropdown ng-if="p.active">
+					<a class="btn btn-default btn-xxs" uib-dropdown-toggle>
+						<span class="caret"></span>
+					</a>
+
+					<ul class="dropdown-menu">
+						<li acl-has-project-creation>
+							<a ng-click="$ctrl.onCloneClicked(p)">
+								<i class="fa fa-clone"></i>
+								<span translate="shared.clone"></span>
+							</a>
+						</li>
+						<li acl-has-project-role="owner" acl-project="p">
+							<a ng-click="$ctrl.onDeleteClicked(p)">
+								<i class="fa fa-trash text-danger"></i>
+								<span class="text-danger" translate="shared.delete"></span>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 
 			<div class="bl-info">
-				<div ng-if="!p.active" class="text-danger" translate="project.was_deleted"></div>
-				<div ng-if="p.active && !p.running" class="text-warning" translate="project.is_finished"></div>
+				<div ng-if="!p.active" class="text-danger">
+					<i class="fa fa-trash"></i>
+					<span translate="project.was_deleted"></span>
+				</div>
+				<div ng-if="p.active && !p.running" class="text-warning">
+					<i class="fa fa-warning"></i>
+					<span translate="project.is_finished"></span>
+				</div>
 			</div>
 		</div>
 	</div>
