--- a/frontend/src/components/pages/project-structure-data-source/data-source-edit.html
+++ b/frontend/src/components/pages/project-structure-data-source/data-source-edit.html
@@ -123,7 +123,7 @@
 					</a>
 
 					<a class="btn btn-xxs btn-danger" ng-click="$ctrl.onRemoveVariableClicked(variable)">
-						<i class="fa fa-times"></i>
+						<i class="fa fa-trash"></i>
 						{{'project.remove_variable'|translate}}
 					</a>
 				</div>
