--- a/frontend/src/components/pages/project-structure-data-source/data-source-list.html
+++ b/frontend/src/components/pages/project-structure-data-source/data-source-list.html
@@ -59,7 +59,7 @@
 						</li>
 						<li>
 							<a ng-click="$ctrl.onDeleteClicked(dataSource)">
-								<i class="fa fa-times text-danger"></i>
+								<i class="fa fa-trash text-danger"></i>
 								<span class="text-danger" translate="shared.delete"></span>
 							</a>
 						</li>
