--- a/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
+++ b/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
@@ -44,8 +44,8 @@
 					<ul class="dropdown-menu">
 					  	<li>
 							<a ng-click="$ctrl.onCreateLogicalFrameClicked(logicalFrame)">
-								<i class="fa fa-clipboard"></i>
-								<span translate="form.create_copy"></span>
+								<i class="fa fa-clone"></i>
+								<span translate="shared.clone"></span>
 							</a>
 					  	</li>
 						<li>
@@ -62,7 +62,7 @@
 						</li>
 						<li>
 							<a ng-click="$ctrl.onDeleteClicked(logicalFrame)">
-								<i class="fa fa-times text-danger"></i>
+								<i class="fa fa-trash text-danger"></i>
 								<span class="text-danger" translate="shared.delete"></span>
 							</a>
 						</li>
