--- a/frontend/src/components/pages/project-structure-user/user-list.html
+++ b/frontend/src/components/pages/project-structure-user/user-list.html
@@ -50,7 +50,7 @@
 					  <ul class="dropdown-menu">
 						<li>
 							<a ng-click="$ctrl.delete(user)">
-								<i class="fa fa-times text-danger"></i>
+								<i class="fa fa-trash text-danger"></i>
 								<span class="text-danger" translate="shared.delete"></span>
 							</a>
 						</li>
