--- a/frontend/src/components/shared/indicator/display.html
+++ b/frontend/src/components/shared/indicator/display.html
@@ -52,7 +52,7 @@
 				  <ul class="dropdown-menu">
 					<li>
 						<a ng-click="$ctrl.onDeleteClicked()">
-							<i class="fa fa-times text-danger"></i>
+							<i class="fa fa-trash text-danger"></i>
 							<span class="text-danger" translate="shared.delete"></span>
 						</a>
 					</li>
