Move click handler of optional inputs.

--- a/frontend/src/components/shared/ng-models/datepicker-optional.html
+++ b/frontend/src/components/shared/ng-models/datepicker-optional.html
@@ -1,7 +1,6 @@
 <div class="input-group">
-	<div class="input-group-addon" style="vertical-align: middle;">
+	<div class="input-group-addon" style="vertical-align: middle;" ng-click="$ctrl.toggleSpecifyDate()">
 		<i class="fa fa-thumb-tack"
-		   ng-click="$ctrl.toggleSpecifyDate()"
 		   ng-style="{color: $ctrl.specifyDate ? 'black' : 'revert'}"></i>
 	</div>
 
