--- a/frontend/src/components/shared/ng-models/number-optional.html
+++ b/frontend/src/components/shared/ng-models/number-optional.html
@@ -1,8 +1,7 @@
 
 <div class="input-group">
-	<div class="input-group-addon" style="vertical-align: middle;">
+	<div class="input-group-addon" style="vertical-align: middle;" ng-click="$ctrl.toggleSpecifyValue()">
 		<i class="fa fa-thumb-tack"
-		   ng-click="$ctrl.toggleSpecifyValue()"
 		   ng-style="{color: $ctrl.specifyValue ? 'black' : 'revert'}"></i>
 	</div>
 
