Minor cosmetics (add newlines after button on admin cc indicator list)

--- a/frontend/src/components/pages/admin-cc-indicator/cc-indicator-list.html
+++ b/frontend/src/components/pages/admin-cc-indicator/cc-indicator-list.html
@@ -54,4 +54,11 @@
 	</div>
 </div>
 
-<a ng-click="$ctrl.onCreateClicked()" class="btn btn-default" translate="indicator.create_new"></a>
+<a ng-click="$ctrl.onCreateClicked()" class="btn btn-default">
+	<i class="fa fa-plus"></i>
+	<span translate="indicator.create_new"></span>
+</a>
+
+<br/>
+<br/>
+<br/>
