--- a/frontend/src/components/pages/cc-indicator-reporting/cc-indicator-reporting.html
+++ b/frontend/src/components/pages/cc-indicator-reporting/cc-indicator-reporting.html
@@ -10,14 +10,14 @@
 	ng-if="$ctrl.graphYs|length"></reporting-graph>
 
 <cc-indicator-group-by
-	projects="$ctrl.projects"
+	projects="$ctrl.selectedProjects"
 	on-update="$ctrl.onGroupByUpdate(groupBy)"></cc-indicator-group-by>
 
 <cc-indicator-filter
 	on-update="$ctrl.onFilterUpdate(filter)"></cc-indicator-filter>
 
 <cc-indicator-table
-	projects="$ctrl.projects"
+	projects="$ctrl.selectedProjects"
 	cc-indicator="$ctrl.ccIndicator",
 
 	filter="$ctrl.filter"
