Fix history translations when deleting/undeleting projects. Activate relevant link in the project structure menu when using data source edition or logical frame edition

--- a/frontend/src/components/pages/project-structure-menu/menu.html
+++ b/frontend/src/components/pages/project-structure-menu/menu.html
@@ -40,7 +40,7 @@
 
 						<a ui-sref="main.project.structure.collection_form_list"
 						   class="list-group-item"
-						   ui-sref-active="active"
+						   ng-class="{active: $ctrl.$state.is('main.project.structure.collection_form_list') || $ctrl.$state.is('main.project.structure.collection_form_edition')}"
 						   disable-if="!$ctrl.project._rev">
 
 							<span class="label label-default pull-right">{{$ctrl.project.forms.length}}</span>
@@ -49,7 +49,7 @@
 						</a>
 
 						<a ui-sref="main.project.structure.logical_frame_list"
-						   ui-sref-active="active"
+						   ng-class="{active: $ctrl.$state.is('main.project.structure.logical_frame_list') || $ctrl.$state.is('main.project.structure.logical_frame_edition')}"
 						   class="list-group-item"
 						   disable-if="!$ctrl.project._rev">
 
