Fix missing "fill from last data entry" button

--- a/frontend/src/components/pages/project-input-edition/input-edition.html
+++ b/frontend/src/components/pages/project-input-edition/input-edition.html
@@ -36,7 +36,7 @@
 		</div>
 
 		<legend>
-			<a ng-if="$ctrl.lastInput" ng-click="$ctrl.copy()" class="btn btn-default btn-xs noprint pull-right">
+			<a ng-if="$ctrl.previousInput" ng-click="$ctrl.copy()" class="btn btn-default btn-xs noprint pull-right">
 				<i class="fa fa-magic"></i>
 				{{'project.fill_with_last_input'|translate}}
 			</a>
