--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -634,49 +634,6 @@ ul[ng-sortable] li *, i.fa.fa-bars {
   cursor: pointer;
 }
 
-
-
-
-#input-list table {
-  table-layout: fixed;
-}
-
-#input-list #table1-container {
-  float: left;
-  width: 15%;
-}
-
-#input-list #table2-container {
-  overflow-x: auto;
-  width: 85%;
-}
-
-#input-list #table2 {
-  width: auto;
-  min-width: 100%;
-}
-
-#input-list .headerField {
-  min-width: 100px;
-  width: 100%;
-  height: 46px;
-  line-height: 46px;
-  overflow: hidden;
-  text-align: center;
-}
-
-#input-list .headerField div {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 14px;
-}
-
-#input-list .bodyField { height: 20px; text-align: center; overflow: hidden; }
-#input-list .bodyField a { display: block; width: 100%;}
-
-#input-list .bodyField2 { height: 24px; text-align: center; overflow: hidden; }
-
-
   .modal-header {
     padding: 7px 15px;
   }
@@ -752,7 +709,7 @@ td.empty > span {
 
 
 
-general-reporting, cc-indicator-reporting {
+general-reporting, cc-indicator-reporting, project-input-list {
   display: flex;
   height: 100vh;
   flex-direction: column;
@@ -844,6 +801,11 @@ body {
 }
 
 
+/*
+ * This class should be renamed, it is used everywhere
+ * Unrelated to being the actual div inside 'project-content'.
+ */
+
 .project-content-inner {
   background-color: white;
   border-radius: 4px;
@@ -851,3 +813,74 @@ body {
   padding: 10px;
   margin-bottom: 10px;
 }
+
+
+/*
+ * Styling of input list table.
+ */
+
+.input-table-container {
+  flex: 1;
+  display: block;
+  overflow: auto;
+  border: 0 solid #ccc;
+  border-top-width: 1px;
+}
+
+
+.input-table-container table {
+  overflow: hidden;
+  border-collapse: separate !important;
+  border-spacing: 0px !important;
+  border-width: 0 !important;
+}
+
+.input-table-container table td, .input-table-container table th {
+  border-top-width: 0 !important;
+  border-left-width: 0 !important;
+  background-color: white;
+}
+
+.input-table-container table td:first-child, .input-table-container table th:first-child {
+  border-left-width: 1px !important;
+}
+
+.input-table-container th:first-child, .input-table-container td:first-child {
+  width: 15%;
+}
+
+project-input-list .headerField {
+  min-width: 100px;
+  width: 100%;
+  height: 46px;
+  line-height: 46px;
+  overflow: hidden;
+  text-align: center;
+}
+
+project-input-list .headerField div {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 14px;
+}
+
+project-input-list .bodyField {
+  height: 20px;
+  text-align: center;
+  overflow: hidden;
+}
+
+project-input-list .bodyField a {
+  display: block;
+  width: 100%;
+}
+
+project-input-list .bodyField2 {
+  height: 24px;
+  text-align: center;
+  overflow: hidden;
+}
+
+
+
+
