--- a/frontend/src/components/pages/project-reporting-olap/olap.html
+++ b/frontend/src/components/pages/project-reporting-olap/olap.html
@@ -19,6 +19,7 @@
 <indicator-filter
 	project="$ctrl.project"
 	indicator="$ctrl.indicator"
+	logical-framework="$ctrl.logicalFramework"
 	on-update="$ctrl.onFilterUpdated(filter)"></indicator-filter>
 
 <div ng-if="$ctrl.indicator">
@@ -30,50 +31,9 @@
 	</span>
 </div>
 
-{{$ctrl.indicator}}<br/><br/>
-{{$ctrl.dimensions}}<br/><br/>
-{{$ctrl.filter}}<br/><br/>
-{{$ctrl.data}}<br/><br/>
-<!-- 
-
-
-<button class="btn btn-primary btn-xs pull-right noprint" csv-save style="margin-bottom: 10px;">
-	<i class="fa fa-download"></i>
-	<span translate="shared.download_table"></span>
-</button>
-
-<div>
-	<span ng-if="baseline !== null">Baseline: {{baseline}}{{unit}}</span>
-	<span ng-if="target !== null">Target: {{target}}{{unit}}</span>
-</div>
-
-<div style="clear: both"></div>
-
-<div ng-if="!cubes">
-	<table class="table table-bordered" id="reporting">
-		<tbody>
-			<tr>
-				<td>
-					<i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
-					<span translate="shared.loading"></span>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-
-<div ng-if="cubes">
-	<div ng-if="display.cols.length == 0 && display.rows.length == 0">
-		<table class="table table-bordered" id="reporting">
-			<tbody>
-				<tr>
-					<td ng-if="display.data == 'formula_missing'" translate="project.indicator_computation_missing"></td>
-					<td ng-if="display.data != 'formula_missing'" reporting-field="display.data"></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-
-	<olap-grid unit="unit" colorization="colorization" cols="display.cols" rows="display.rows" data="display.data"></olap-grid>
-
-</div> -->
+<olap-grid
+	project="$ctrl.project"
+	indicator="$ctrl.indicator"
+	dimensions="$ctrl.dimensions"
+	filter="$ctrl.filter"
+	data="$ctrl.data"></olap-grid>
