Translate PDFs to french & spanish

--- a/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
+++ b/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
@@ -49,13 +49,13 @@
 							</a>
 					  	</li>
 						<li>
-							<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=portrait" target="_blank">
+							<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=portrait&language={{$root.language}}" target="_blank">
 								<i class="fa fa-file-pdf-o"></i>
 								<span translate="project.download_portrait"></span>
 							</a>
 						</li>
 						<li>
-							<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=landscape" target="_blank">
+							<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=landscape&language={{$root.language}}" target="_blank">
 								<i class="fa fa-file-pdf-o fa-rotate-270"></i>
 								<span translate="project.download_landscape"></span>
 							</a>
