--- a/frontend/src/components/shared/indicator/indicator-edition.html
+++ b/frontend/src/components/shared/indicator/indicator-edition.html
@@ -18,7 +18,8 @@
 			<label class="col-sm-2 control-label" translate="shared.description"></label>
 
 			<div class="col-sm-10">
-				{{$ctrl.indicator.description[$root.language]}}
+				<p class="form-control-static" ng-if="$ctrl.indicator.description[$root.language]">{{$ctrl.indicator.description[$root.language]}}</p>
+				<p class="form-control-static" ng-if="!$ctrl.indicator.description[$root.language]" translate="indicator.missing_description"></p>
 
 				<p class="help-block">
 					<i class="fa fa-info-circle"></i>
