--- a/frontend/src/components/pages/project-structure-home/home.html
+++ b/frontend/src/components/pages/project-structure-home/home.html
@@ -7,25 +7,39 @@
 </ol>
 
 <div class="project-content-inner">
-	<!-- <legend translate="project.structure"></legend> -->
 
 	<div class="row">
 		<div class="col-md-4">
 			<p>
 				Cette section va vous aider à formaliser votre projet.
-				Elle doit être utilisé pendant la phase de programmation du projet.
+				Elle doit être utilisé pendant la phase de programmation du projet, puis révisée pendant la phase d'implantation du projet.
+			</p>
+			<p>
+				Aidez-vous de votre data-flow pour structurer votre projet dans Monitool. Si vous avez suivi toutes les étapes, vous disposez de tous les éléments nécessaires.
 			</p>
 			<ul>
-				<li>Documentez les objectifs et résultats attendus par votre projet</li>
-				<li>Documentez les activités que vous mettrez en oeuvre pour les atteindre</li>
-				<li>Listez les indicateurs qui mesureront l'atteinte de vos résultats, ainsi que le suivi de vos activités</li>
 				<li>
-					Listez vos outils de collecte de donnée (Kobo, Excel, papier, ...)
-					ainsi que d'autres sources de données (SNIS, ...) que vous
+					Documentez les objectifs et résultats attendus par votre projet
+				</li>
+				<li>
+					Documentez les activités que vous mettrez en oeuvre pour les atteindre
+				</li>
+				<li>
+					Listez les indicateurs qui mesureront l'atteinte de vos résultats, ainsi que le suivi de vos activités
+					(indicateurs de processus)
+				</li>
+				<li>
+					Listez vos outils de collecte de donnée (Excel, papier, ...)
+					ainsi que d'autres sources de données (SNIS, enquêtes...) que vous
 					utiliserez pour calculer vos indicateurs, en renseignant leur periodicité et sites de collecte et leur contenu
 				</li>
 			</ul>
 
+			<div class="alert alert-info">
+				<i class="fa fa-info-circle"></i>
+				Utilisez des noms courts pour nommer lieux de collecte, sources de données, variables et indicateurs.<br/>
+				En évitant les acronymes vous améliorez la lisibilité de vos graphiques et tableaux et permettez une meilleur compréhension de votre projet par tous les acteurs de Médecins du Monde.
+			</div>
 			<div class="alert alert-info">
 				<i class="fa fa-info-circle"></i>
 				En cas d'erreur, cliquez sur
@@ -46,8 +60,8 @@
 			</div>
 
 		</div>
-		<div class="col-md-8">
 
+		<div class="col-md-8">
 			<table class="table table-bordered table-striped">
 				<thead>
 					<tr>
@@ -129,7 +143,7 @@
 								<span translate="project.collection_form_list"></span>
 							</a>
 
-							dont vous allez extraire les données nécessaires au calculs des indicateurs vos cadres logiques.<br/>
+							dont vous allez extraire les données nécessaires au calculs des indicateurs de tous vos cadres logiques.<br/>
 							À mesure de votre avancement, mettez à jour les formules de calcul de vos indicateurs dans
 
 							<a class="btn btn-default btn-xs" ui-sref="main.project.structure.logical_frame_list" disable-if="!$ctrl.project._rev">
